src/yini_test/cases/golden/strict/valid/lists/empty-list.strict.yini
@yini strict

^ Lists
items = []

/END
