src/yini_test/cases/golden/strict/invalid/lists/missing-list-comma.strict.yini
@yini strict

^ Lists
items = ["alpha" "beta"]

/END
